KoResourcePaths: fix regression when enumerating resource directories

Before commit 985ba60efb40f0cf46f50ab3803943d27c0dec55, all checks
for extra resource directories were made via QString::split with
SkipEmptyParts. This behaviour was removed, which means that if
EXTRA_RESOURCE_VARIABLES has an empty value, the resource loader will
try to hit an UNC network path for every non-empty folder.

CCBUG: 457348

BUG: 458188
(cherry picked from commit 99644fa7bee1f2ae1b6787a4b5c2ee79a7b528e2)